--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     "adjusttext>=1.3.0",
     "seaborn>=0.13.2",
     "sqlalchemy>=2.0.43",
-    "psycopg2>=2.9.11",
+    "psycopg2-binary>=2.9.11",
     "fastmcp>=2.12.5",
     "pypdf>=6.1.1",
 ]
